# flask_blog

./: .gitignore  config.py  flaskblog.py  forms.py  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: account.html  create_post.html  home.html  layout.html  login.html  post.html  register.html  reset_request.html  user_posts.html
flaskblog/: __init__.py  config.py  forms.py  models.py  routes.py
flaskblog/main/: routes.py
flaskblog/posts/: forms.py  routes.py
flaskblog/templates/: about.html  account.html  home.html  layout.html  login.html  post.html  register.html  reset_token.html  user_posts.html
flaskblog/templates/errors/: 403.html  500.html
flaskblog/users/: forms.py  routes.py  utils.py
migrations/versions/: 70f13c0d24d9_rename_password_column_to_password_hash.py
templates/: home.html  layout.html  login.html  register.html
