[project]
name = "flask-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pillow>=11.3.0",
]
[tool.ruff]
exclude = [
    ".venv",        # virtual environment
    "migrations",   # Flask/SQLAlchemy migrations
    "__pycache__",  
    "tests/helpers", # custom test helper dir
]
